Fix show detail 'Watch now' moving off window when window size too small

--- a/src/app/styl/views/show_detail.styl
+++ b/src/app/styl/views/show_detail.styl
@@ -501,7 +501,8 @@
 
                 .sdow-watchnow
                     margin-top: 6px
-                    float: right
+                    position: absolute
+                    right: 30px
 
         /* ugly rule to bypass restrictions */
         .sd-seasons[style*="display: none"] + .sd-episodes ul a div
